--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ h1 {
 <header>
     <div class="container d-flex justify-content-between align-items-center">
         <div class="d-flex align-items-center">
-            <button id="inde" class="btn btn-outline-light me-3">Home</button>
+            <button id="inde" class="btn btn-outline-light me-3" href="login.html">Home</button>
             <p>Techwave</p>
         </div>
         <div class="d-flex">
